Closed Bug 1059389 Opened 10 years ago Closed 10 years ago

content/media/MediaStreamGraph.cpp fails to build with --disable-webrtc: "error: use of undeclared identifier 'gFarendObserver'"

Categories

(Core :: Audio/Video, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35
Tracking Status
firefox32 --- unaffected
firefox33 --- unaffected
firefox34 --- fixed
firefox35 --- fixed

People

(Reporter: MatsPalmgren_bugz, Assigned: padenot)

References

Details

(Keywords: regression)

Attachments

(1 file)

mozilla-inbound rev 226c2201e285

make[1]: Entering directory `objdir/content/media'
/usr/bin/ccache /usr/bin/clang++ -o Unified_cpp_content_media1.o -c -I../../dist/stl_wrappers -I../../dist/system_wrappers -include config/gcc_hidden.h -DOS_POSIX=1 -DOS_LINUX=1 -DMOZILLA_INTERNAL_API -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL  -DSTATIC_EXPORTABLE_JS_API -DAB_CD=en-US -DNO_NSPR_10_SUPPORT -Icontent/media -I. -Iobjdir/ipc/ipdl/_ipdlheaders -Iipc/chromium/src -Iipc/glue -Icontent/base/src -Ilayout/generic -Ilayout/xul -Inetwerk/base/src -I../../dist/include  -Iobjdir/dist/include/nspr -Iobjdir/dist/include/nss       -fPIC  -Qunused-arguments  -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MP -MF .deps/Unified_cpp_content_media1.o.pp -Qunused-arguments  -Qunused-arguments -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Werror=int-to-pointer-cast -Werror=type-limits -Wempty-body -Wsign-compare -Wno-invalid-offsetof -Wno-inline-new-delete -Wno-c++0x-extensions -Wno-extended-offsetof -Wno-unknown-warning-option -Wno-return-type-c-linkage -fno-exceptions -fno-strict-aliasing -fno-rtti -fno-exceptions -fno-math-errno -std=gnu++0x -pthread -pipe  -DDEBUG -DTRACING -g -fno-omit-frame-pointer       objdir/content/media/Unified_cpp_content_media1.cpp
In file included from objdir/content/media/Unified_cpp_content_media1.cpp:93:
content/media/MediaStreamGraph.cpp:530:43: error: use of undeclared identifier 'gFarendObserver'; did you mean 'mFarendObserverRef'?
  if (shouldAEC && !mFarendObserverRef && gFarendObserver) {
                                          ^~~~~~~~~~~~~~~
                                          mFarendObserverRef
I think this is a regression in the last few days.
Keywords: regression
yeah, we should wrap that into WEBRTC defines
jesup warned me about a known soon-to-be-fixed --disable-webrtc build failure in the last day or two. (not sure if he had a bug open for it or not)

CC'ing him so he can chime in and/or dupe if appropriate.
See Also: → 1061900
Version: unspecified → Trunk
Paul, were you going to take this?

--disable-webrtc builds have been broken for 2 weeks now...
Flags: needinfo?(paul)
This fixes it, sorry about the delay.
Attachment #8486513 - Flags: review?(rjesup)
Assignee: nobody → paul
Status: NEW → ASSIGNED
Attachment #8486513 - Flags: review?(rjesup) → review+
I've confirmed that I can build successfully with this patch & with --disable-webrtc. Thanks!
https://hg.mozilla.org/mozilla-central/rev/fabe42bc6bf0
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Depends on: 1074009
Comment on attachment 8486513 [details] [diff] [review]
Unbreak --disable-webrtc

Approval Request Comment
[Feature/regressing bug #]: regressed likely because of bug 848954
[User impact if declined]: --disable-webrtc broken on Aurora (FF34)
[Describe test coverage new/current, TBPL]:
[Risks and why]: Low iff together with bug 1074009. At most may disable some code at compile time which in itself may cause build breakage.
[String/UUID change made/needed]: None
Attachment #8486513 - Flags: approval-mozilla-aurora?
Comment on attachment 8486513 [details] [diff] [review]
Unbreak --disable-webrtc

Aurora+
Attachment #8486513 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: