Bug 1059389 - Unbreak --disable-webrtc. r=jesup, a=lmandel